log
Wed 27 Mar 2024 02:13:33 PM UTC: 
 tests:  0|6
total_score: 0/70
57e5f8c
Wed 27 Mar 2024 02:16:01 PM UTC: 
 list.c | 10 ++++++++--
 1 file changed, 8 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
3f74371
Wed 27 Mar 2024 02:21:24 PM UTC: 
 list.c | 14 ++++++++++++--
 1 file changed, 12 insertions(+), 2 deletions(-)
 tests:  5|4
total_score: 25/70
d6d4c9a
Wed 27 Mar 2024 02:23:39 PM UTC: 
 list.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
 tests:  6|4
total_score: 25/70
7326777
Wed 27 Mar 2024 02:24:50 PM UTC: 
 list.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  9|3
total_score: 35/70
473ddd5
Wed 27 Mar 2024 02:28:49 PM UTC: 
 list.c | 15 ++++++++++++++-
 1 file changed, 14 insertions(+), 1 deletion(-)
 tests:  10|2
total_score: 45/70
5ad9688
Wed 27 Mar 2024 02:29:31 PM UTC: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  10|2
total_score: 45/70
5b8fc8b
Wed 27 Mar 2024 02:36:12 PM UTC: 
 list.c | 22 +++++++++++++++++++++-
 1 file changed, 21 insertions(+), 1 deletion(-)
 tests:  11|1
total_score: 55/70
3d919e6
Wed 27 Mar 2024 02:43:50 PM UTC: 
 list.c | 24 ++++++++++++++++++++++--
 1 file changed, 22 insertions(+), 2 deletions(-)
In file included from test.c:5:
list.c: In function ‘popCurrent’:
list.c:138:9: error: unused variable ‘data’ [-Werror=unused-variable]
  138 |   void *data = list->current->data;
      |         ^~~~
cc1: all warnings being treated as errors
Compilation failed
d5fd9f8
Wed 27 Mar 2024 02:45:05 PM UTC: 
 list.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
In file included from test.c:5:
list.c: In function ‘popCurrent’:
list.c:138:10: error: unused variable ‘data’ [-Werror=unused-variable]
  138 |   void * data = list->current->data;
      |          ^~~~
cc1: all warnings being treated as errors
Compilation failed
af9e37f
Wed 27 Mar 2024 02:45:54 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  12|0
total_score: 70/70
d26f295
